Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-21541

main.sum_distinct-big fails with Assertion `m_buffer_end == __null || end <= m_buffer_end'

    XMLWordPrintable

Details

    Description

      10.5 f52bf920

      $ perl ./mtr main.sum_distinct-big --mem
       
      mysqld: /data/src/10.5-bug/sql/sql_sort.h:106: void Merge_chunk::set_buffer_end(uchar*): Assertion `m_buffer_end == __null || end <= m_buffer_end' failed.
      200121  2:48:57 [ERROR] mysqld got signal 6 ;
       
      #7  0x00007f4e8c65df12 in __GI___assert_fail (assertion=0x5628401ed508 "m_buffer_end == __null || end <= m_buffer_end", file=0x5628401ed4e0 "/data/src/10.5-bug/sql/sql_sort.h", line=106, function=0x5628401ed660 <Merge_chunk::set_buffer_end(unsigned char*)::__PRETTY_FUNCTION__> "void Merge_chunk::set_buffer_end(uchar*)") at assert.c:101
      #8  0x000056283f5c69b9 in Merge_chunk::set_buffer_end (this=0x7f4e5823ff38, end=0x7f4e5807c9b0 "\370\061") at /data/src/10.5-bug/sql/sql_sort.h:106
      #9  0x000056283f5c595d in merge_walk (merge_buffer=0x7f4e58079b30 "", merge_buffer_size=16384, key_length=8, begin=0x7f4e5823fdb0, end=0x7f4e58240018, walk_action=0x56283f8a3912 <item_sum_distinct_walk(void*, element_count, void*)>, walk_action_arg=0x7f4e58016b98, compare=0x56283f8a38b6 <simple_raw_key_cmp(void*, void const*, void const*)>, compare_arg=0x7f4e58016bd0, file=0x7f4e58018078, with_counters=false) at /data/src/10.5-bug/sql/uniques.cc:532
      #10 0x000056283f5c604c in Unique::walk (this=0x7f4e58018048, table=0x7f4e58016cb0, action=0x56283f8a3912 <item_sum_distinct_walk(void*, element_count, void*)>, walk_action_arg=0x7f4e58016b98) at /data/src/10.5-bug/sql/uniques.cc:673
      #11 0x000056283f8a4be8 in Aggregator_distinct::endup (this=0x7f4e58016b98) at /data/src/10.5-bug/sql/item_sum.cc:1088
      #12 0x000056283f8a786e in Item_sum_sum::val_str (this=0x7f4e58013b18, str=0x7f4e81a120a0) at /data/src/10.5-bug/sql/item_sum.cc:1715
      #13 0x000056283f6a245b in Type_handler::Item_send_str (this=0x562840efb440 <type_handler_newdecimal>, item=0x7f4e58013b18, protocol=0x7f4e580010c8, buf=0x7f4e81a12070) at /data/src/10.5-bug/sql/sql_type.cc:7138
      #14 0x000056283f5de606 in Type_handler_decimal_result::Item_send (this=0x562840efb440 <type_handler_newdecimal>, item=0x7f4e58013b18, protocol=0x7f4e580010c8, buf=0x7f4e81a12070) at /data/src/10.5-bug/sql/sql_type.h:4628
      #15 0x000056283f33f056 in Item::send (this=0x7f4e58013b18, protocol=0x7f4e580010c8, buffer=0x7f4e81a12070) at /data/src/10.5-bug/sql/item.h:1046
      #16 0x000056283f338e5f in Protocol::send_result_set_row (this=0x7f4e580010c8, row_items=0x7f4e58015138) at /data/src/10.5-bug/sql/protocol.cc:1035
      #17 0x000056283f3ee137 in select_send::send_data (this=0x7f4e58014d60, items=...) at /data/src/10.5-bug/sql/sql_class.cc:3021
      #18 0x000056283f501cdd in select_result_sink::send_data_with_check (this=0x7f4e58014d60, items=..., u=0x7f4e58004a48, sent=0) at /data/src/10.5-bug/sql/sql_class.h:5140
      #19 0x000056283f4e95a1 in end_send_group (join=0x7f4e58014d88, join_tab=0x7f4e580163a0, end_of_records=true) at /data/src/10.5-bug/sql/sql_select.cc:21717
      #20 0x000056283f4e5b09 in sub_select (join=0x7f4e58014d88, join_tab=0x7f4e58015ff8, end_of_records=true) at /data/src/10.5-bug/sql/sql_select.cc:20325
      #21 0x000056283f4e5231 in do_select (join=0x7f4e58014d88, procedure=0x0) at /data/src/10.5-bug/sql/sql_select.cc:19916
      #22 0x000056283f4b986d in JOIN::exec_inner (this=0x7f4e58014d88) at /data/src/10.5-bug/sql/sql_select.cc:4457
      #23 0x000056283f4b8999 in JOIN::exec (this=0x7f4e58014d88) at /data/src/10.5-bug/sql/sql_select.cc:4238
      #24 0x000056283f4ba0ca in mysql_select (thd=0x7f4e58000b00, tables=0x7f4e58013da0, fields=..., conds=0x0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2147748608, result=0x7f4e58014d60, unit=0x7f4e58004a48, select_lex=0x7f4e58013568) at /data/src/10.5-bug/sql/sql_select.cc:4662
      #25 0x000056283f4a9c5a in handle_select (thd=0x7f4e58000b00, lex=0x7f4e58004988, result=0x7f4e58014d60, setup_tables_done_option=0) at /data/src/10.5-bug/sql/sql_select.cc:428
      #26 0x000056283f46f6ab in execute_sqlcom_select (thd=0x7f4e58000b00, all_tables=0x7f4e58013da0) at /data/src/10.5-bug/sql/sql_parse.cc:6219
      #27 0x000056283f46572c in mysql_execute_command (thd=0x7f4e58000b00) at /data/src/10.5-bug/sql/sql_parse.cc:3904
      #28 0x000056283f47436c in mysql_parse (thd=0x7f4e58000b00, rawbuf=0x7f4e580134b8 "SELECT SUM(DISTINCT id) sm FROM t2", length=34, parser_state=0x7f4e81a13570, is_com_multi=false, is_next_command=false) at /data/src/10.5-bug/sql/sql_parse.cc:7988
      #29 0x000056283f45f42f in dispatch_command (command=COM_QUERY, thd=0x7f4e58000b00, packet=0x7f4e58093791 "", packet_length=34, is_com_multi=false, is_next_command=false) at /data/src/10.5-bug/sql/sql_parse.cc:1846
      #30 0x000056283f45db89 in do_command (thd=0x7f4e58000b00) at /data/src/10.5-bug/sql/sql_parse.cc:1364
      #31 0x000056283f5fdf15 in do_handle_one_connection (connect=0x56284299af00, put_in_cache=true) at /data/src/10.5-bug/sql/sql_connect.cc:1422
      #32 0x000056283f5fdc44 in handle_one_connection (arg=0x56284299af00) at /data/src/10.5-bug/sql/sql_connect.cc:1319
      #33 0x000056283fb58f3f in pfs_spawn_thread (arg=0x56284299ab50) at /data/src/10.5-bug/storage/perfschema/pfs.cc:1862
      #34 0x00007f4e8e1d34a4 in start_thread (arg=0x7f4e81a14700) at pthread_create.c:456
      #35 0x00007f4e8c71ad0f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:97
      

      The failure appeared after this commit

      commit f52bf92014efae6a1da9c2f26a7e3792ed5f5396
      Author: Varun Gupta
      Date:   Tue Jan 21 01:37:47 2020 +0530
       
          MDEV-21263: Allow packed values of non-sorted fields in the sort buffer
      

      Attachments

        Issue Links

          Activity

            People

              varun Varun Gupta (Inactive)
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 4h 20m
                  4h 20m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.